added organization field group appending to all generators inputs

--- a/locales/en.json
+++ b/locales/en.json
@@ -65,6 +65,21 @@
       }
     },
     "event-manager": {
+      "common-generator": {
+        "field-group": {
+          "organization": {
+            "title": "Organization",
+            "field": {
+              "category-id": {
+                "label": "Category"
+              },
+              "tags": {
+                "label": "Tags"
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
