--- a/locales/fa.json
+++ b/locales/fa.json
@@ -65,6 +65,21 @@
       }
     },
     "event-manager": {
+      "common-generator": {
+        "field-group": {
+          "organization": {
+            "title": "سازمان دهی",
+            "field": {
+              "category-id": {
+                "label": "رسته"
+              },
+              "tags": {
+                "label": "برچسب ها"
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
