added dna feature to basic generator and changed in translations

--- a/locales/fa.json
+++ b/locales/fa.json
@@ -1,7 +1,7 @@
 {
   "translation": {
     "basic-generator": {
-      "name": "اصلی",
+      "name": "عمومی",
       "description": "رویداد های سفارشی بسازید، ساده یا شدیدا پیچیده.",
       "field-group": {
         "basic": {
